reverted api 28 + added publish script

--- a/test/build.gradle
+++ b/test/build.gradle
@@ -16,7 +16,7 @@ android {
 }
 
 dependencies {
-    api "androidx.appcompat:appcompat:$androidXLibraryVersion"
+    api "com.android.support:appcompat-v7:$supportLibraryVersion"
     implementation project(":cropper")
 
 }
